--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "signing-flow",
   "version": "1.0.0",
-  "description": "asdf",
+  "description": "CLI tool",
   "main": "dist/cli.js",
   "dependencies": {
     "bignumber.js": "7.2.1",
@@ -27,7 +27,9 @@
     "typechain": "0.3.8",
     "typescript": "3.1.3"
   },
-  "repository": "http://.dk",
+  "bin": {
+    "cling": "./dist/cli.js"
+  },
   "scripts": {
     "test-repo": "npm run clear && npm i && npm run build && npm test",
     "test": "cd ethereum; truffle test",
@@ -38,5 +40,17 @@
     "compile-tests": "node node_modules/typescript/bin/tsc --project ./ethereum/test -p ./ethereum/tsconfig.json"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/johncoffee/multisig-contracts.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/johncoffee/multisig-contracts/issues"
+  },
+  "homepage": "https://github.com/johncoffee/multisig-contracts#readme"
 }
